Attempt at argument checking

--- a/default_config.yaml
+++ b/default_config.yaml
@@ -1,13 +1,17 @@
 bot:
-  api_key:
+  api_key: uw sleutel
   command_prefix: /
 
-  modules:
-    weather:
-      enabled: true
-      commands:
-        get:
-          description: Gets the current weather situation
-          aliases:
-            - currentweather
-            - weather
+modules:
+  weather:
+    enabled: true
+    commands:
+      get:
+        description: Gets the current weather situation
+        aliases:
+        - currentweather
+        - weather
+
+services:
+  weather:
+    open_weather_api_key:
