--- a/pom.xml
+++ b/pom.xml
@@ -40,5 +40,10 @@
             <artifactId>eo-yaml</artifactId>
             <version>2.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.mashape.unirest</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>1.4.9</version>
+        </dependency>
     </dependencies>
 </project>
