Management module with clean command

--- a/default_config.yaml
+++ b/default_config.yaml
@@ -9,8 +9,16 @@ modules:
       get:
         description: Gets the current weather situation
         aliases:
-        - currentweather
-        - weather
+          - currentweather
+          - weather
+
+  management:
+    enabled: true
+    commands:
+      cleanmessages:
+        description: This command cleans up messages in a channel
+        aliases:
+          - clean
 
 services:
   weather:
