--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: java
 dist: trusty
 install: mvn clean install
+
+addons:
+  sonarcloud:
+    organization: "dacaspex-github"
+    token:
+      secure: $SONAR_CLOUD
+script:
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
