--- a/pom.xml
+++ b/pom.xml
@@ -16,28 +16,28 @@
         </repository>
     </repositories>
 
-    <!--<profiles>-->
-        <!--<profile>-->
-            <!--<id>sonar</id>-->
-            <!--<properties>-->
-                <!--<sonar.host.url>https://sonarcloud.io</sonar.host.url>-->
-                <!--<sonar.organization>dacaspex-github</sonar.organization>-->
-                <!--<sonar.projectKey>Dacaspex_Hansque</sonar.projectKey>-->
-            <!--</properties>-->
-            <!--<build>-->
-                <!--<plugins>-->
-                    <!--<plugin>-->
-                        <!--<groupId>org.jacoco</groupId>-->
-                        <!--<artifactId>jacoco-maven-plugin</artifactId>-->
-                    <!--</plugin>-->
-                    <!--<plugin>-->
-                        <!--<groupId>org.sonarsource.scanner.maven</groupId>-->
-                        <!--<artifactId>sonar-maven-plugin</artifactId>-->
-                    <!--</plugin>-->
-                <!--</plugins>-->
-            <!--</build>-->
-        <!--</profile>-->
-    <!--</profiles>-->
+    <profiles>
+        <profile>
+            <id>sonar</id>
+            <properties>
+                <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+                <sonar.organization>dacaspex-github</sonar.organization>
+                <sonar.projectKey>Dacaspex_Hansque</sonar.projectKey>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.sonarsource.scanner.maven</groupId>
+                        <artifactId>sonar-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <!-- https://mincong-h.github.io/2017/12/09/sonar-integration-with-maven/ -->
     <build>
